Fix ordered column highlight in dark mode

--- a/app/assets/stylesheets/components/datagrid.sass
+++ b/app/assets/stylesheets/components/datagrid.sass
@@ -31,3 +31,10 @@ table.datagrid
       margin-bottom: 0
     .table-info-box
       text-align: right
+
+html.dark
+  table.datagrid
+    td,
+    th
+      &.ordered
+        background-color: #323232
